--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "changeset": "changeset",
     "release": "changeset publish",
     "postinstall": "husky install",
-    "format": "prettier -c --write \"*/**\""
+    "format": "prettier -c --write \"*/**\"",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "lint-staged": {
     "*.{css,md,scss}": "prettier --write",
@@ -38,18 +40,22 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/plugin-transform-react-jsx": "^7.14.5",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@changesets/cli": "^2.16.0",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@google-cloud/storage": "^5.10.0",
     "@sajari/eslint-config": "^0.1.1",
     "@types/body-scroll-lock": "^2.6.2",
+    "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.4",
-    "@types/node": "^16.4.3",
-    "@types/react": "^17.0.15",
+    "@types/node": "^16.9.1",
+    "@types/react": "^17.0.20",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "ansi-colors": "^4.1.1",
+    "babel-jest": "^27.2.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "cross-env": "^7.0.3",
@@ -63,13 +69,16 @@
     "fancy-log": "^1.3.3",
     "husky": "^7.0.1",
     "if-env": "^1.0.4",
+    "jest": "^27.2.0",
     "lint-staged": "^11.1.1",
     "postcss": "^8.2.7",
     "preact-cli": "^3.0.5",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
+    "react-test-renderer": "^17.0.2",
     "sirv-cli": "^1.0.12",
     "terser": "^5.7.1",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
   },
   "dependencies": {
@@ -80,6 +89,7 @@
     "@sajari/react-hooks": "^3.6.1",
     "@sajari/react-sdk-utils": "^1.6.3",
     "@sajari/react-search-ui": "^4.8.2",
+    "@types/react-dom": "^17.0.9",
     "body-scroll-lock": "^3.1.5",
     "lodash-es": "^4.17.21",
     "mitt": "^2.1.0",
@@ -87,6 +97,8 @@
     "preact-habitat": "^3.3.0",
     "preact-render-to-string": "^5.1.12",
     "query-string": "^6.14.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-i18next": "^11.11.2",
     "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "^2.0.3",
